force-app/main/default/objects/custom_create51__c/custom_create51__c.object-meta.xml
<CustomObject>
    <label>Custom created object51</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects51</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>