force-app/main/default/objects/custom_create51__c/fields/custom_create_51field560__c.field-meta.xml
<CustomField>
    <fullName>custom_create_51field560__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 51field560</label>
    <type>Checkbox</type>
</CustomField>