force-app/main/default/objects/custom_create51__c/fields/custom_create_51field592__c.field-meta.xml
<CustomField>
    <fullName>custom_create_51field592__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 51field592</label>
    <type>Checkbox</type>
</CustomField>